新增改变文件编码的命令说明

--- a/notes/emacs学习笔记.org
+++ b/notes/emacs学习笔记.org
@@ -16,15 +16,6 @@
 | C-RET          | 在当前标题树后插入同级标题符号                      |
 | M-S-RET        | 在当前标题后插入同级TODO标题                        |
 | C-S-RET        | 在当前标题树后插入同级TODO标题                                                    |
-*** 表格操作							   :表格:Table:
-| 命令     | 说明                           |
-|----------+--------------------------------|
-| C-c RET  | 输入表头后可以直接生产整个表格 |
-| C-c 竖线 | 创建或转换成表格               |
-| C-c C-c  | 调整表格，不移动光标           |
-| TAB      | 移动到下一区域，必要时新建一行 |
-| S-TAB    | 移动到上一区域                 |
-| RET      | 移动到下一行，必要时新建一行   |
 *** Org文档内容简介
  + 以 # 号后加一空格开始的行表示注释，文件导出时这些内容不被导出，上面第一行就是。
  + 以 #+ 符号开始的行用于设置文档参数或内容属性，比如文档的标题、作者，org-mode打开时文档的呈现状态等。
@@ -62,3 +53,16 @@
  + C-x r y 矩形粘贴 
  + C-x r o 开辟一块空白矩形，字右移 
  + C-x r M-w 矩形复制，这个功能是 rect-mark.el 提供的
+** 表格操作							   :表格:Table:
+| 命令     | 说明                           |
+|----------+--------------------------------|
+| C-c RET  | 输入表头后可以直接生产整个表格 |
+| C-c 竖线 | 创建或转换成表格               |
+| C-c C-c  | 调整表格，不移动光标           |
+| TAB      | 移动到下一区域，必要时新建一行 |
+| S-TAB    | 移动到上一区域                 |
+| RET      | 移动到下一行，必要时新建一行   |
+** 编码问题
+| 命令                | 描述                  |
+|---------------------+-----------------------|
+| C-x RET f utf-8 RET | 将文件编码转换成utf-8 |
