新增配置文件.emacs 更新任务日志

--- a/notes/emacs学习笔记.org
+++ b/notes/emacs学习笔记.org
@@ -63,6 +63,7 @@
 | S-TAB    | 移动到上一区域                 |
 | RET      | 移动到下一行，必要时新建一行   |
 ** 编码问题
-| 命令                | 描述                  |
-|---------------------+-----------------------|
-| C-x RET f utf-8 RET | 将文件编码转换成utf-8 |
+| 命令                      | 说明                                |
+|---------------------------+-------------------------------------|
+| C-x RET f utf-8 RET       | 将文件编码转换成utf-8               |
+| C-x C-m c RET C-x C-w RET | 另存为指定编码 (会提示当前文件编码) |
