--- a/todos/todo.org
+++ b/todos/todo.org
@@ -1,13 +1,28 @@
 ** Mobi Platform
-*** Pad端重构
+*** 新需求[0/1]
+**** TODO [#C] 实现Pad应用程序后台静默升级[0/0]
+     SCHEDULED: <2013-07-15 周一>
+ 1. 技术准备，网上调研静默升级方案
+ 2. 验证技术方案
+ 3. 实现并进行测试 
+*** Bug修改[1/1]
+**** DONE [#A] 解决三级目录出现在欢迎界面的问题[/]
+     DEADLINE: <2013-07-12 周五 16:00>
+     - State "DONE"       from "TODO"       [2013-07-12 周五 15:45]
+ + 首先需要找到重现问题的方法
+   - 已经重现问题：从包含三级目录的商品选购界面进入到“历史订单”或者“购物车”界面，然后关闭屏幕，再开启屏幕就会导致三级目录显示在欢迎界面。
+ + 定位出问题的所在
+ + 解决问题
+*** Pad端重构[0/1]
 **** 工作 确认Pad端新原型[2/3]
 ***** DONE 跟孙总讨论初步界面要求[/]
       - State "DONE"       from "TODO"       [2013-07-12 周五 10:50]
 ***** DONE 跟李建阳沟通界面需求[/]
       - State "DONE"       from "TODO"       [2013-07-12 周五 10:50]
-***** 工作 绘制效果图[/]
-****** TODO 绘制历史订单效果图[/]
+***** 工作 绘制效果图[1/2]
+****** DONE 绘制历史订单效果图[/]
        DEADLINE: <2013-07-12 周五 14:00>
+       - State "DONE"       from "TODO"       [2013-07-12 周五 15:45]
 ****** TODO 绘制三级分类显示效果图[/]
        DEADLINE: <2013-07-15 周一 12:00>
 ***** 讨论界面效果图[/]
@@ -18,3 +33,5 @@
 ** TODO 深入了解Git分布式版本管理系统，阅读《Pro.Git-zh_CN》
 * 购房
 ** TODO 房子过户
+
+* 测试
