更新学习笔记和计划

--- a/todos/todo.org
+++ b/todos/todo.org
@@ -5,7 +5,14 @@
  1. 技术准备，网上调研静默升级方案
  2. 验证技术方案
  3. 实现并进行测试 
-*** Bug修改[1/1]
+*** Bug修改[2/3]
+**** TODO [#B] mobi-platform-ba-monitor的依赖关系有问题[/]
+     DEADLINE: <2013-07-15 周一>
+     mobi-platform-ba-monitor不应该依赖bd-order、bd-model、order-monitor。
+     这个需要找周冰华了解清楚！
+**** DONE [#A] 解决未发布商品出现在PAD上的问题[0/0]
+     CLOSED: [2013-07-13 周六 11:33]
+     - State "DONE"       from "TODO"       [2013-07-13 周六 11:33]
 **** DONE [#A] 解决三级目录出现在欢迎界面的问题[/]
      DEADLINE: <2013-07-12 周五 16:00>
      - State "DONE"       from "TODO"       [2013-07-12 周五 15:45]
@@ -26,6 +33,10 @@
 ****** TODO 绘制三级分类显示效果图[/]
        DEADLINE: <2013-07-15 周一 12:00>
 ***** 讨论界面效果图[/]
+***** 实现”历史订单“界面（黄彦培）
+      DEADLINE: <2013-07-16 周二 17:00>
+***** 实现”分类目录“界面（熊志军，黄彦培）
+      DEADLINE: <2013-07-19 周五 17:00>
 * 阅读、充电
 ** TODO 提高自己的时间管理能力，阅读《尽管去做——无压力工作的艺术》     :Easy:
    DEADLINE: <2013-07-14 周日>
@@ -34,4 +45,5 @@
 * 购房
 ** TODO 房子过户
 
-* 测试
+* DONE 测试
+
