新增一些org文件，更新任务列表

--- a/notes/emacs学习笔记.org
+++ b/notes/emacs学习笔记.org
@@ -7,14 +7,21 @@ C-q C-j 表示回车换行，可以用在字符串替换中
  + M-x eval-buffer 使当前的buffer中的设置语句立刻生效。
  + M-x load-file ~/.emacs 载入.emacs文件，从而使其中的设置生效。
 ** 表格操作							   :表格:Table:
-| 命令     | 说明                           |
-|----------+--------------------------------|
-| C-c RET  | 输入表头后可以直接生产整个表格 |
-| C-c 竖线 | 创建或转换成表格               |
-| C-c C-c  | 调整表格，不移动光标           |
-| TAB      | 移动到下一区域，必要时新建一行 |
-| S-TAB    | 移动到上一区域                 |
-| RET      | 移动到下一行，必要时新建一行   |
+| 命令           | 说明                             |
+|----------------+----------------------------------|
+| C-c RET        | 输入表头后可以直接生产整个表格   |
+| C-c 竖线       | 创建或转换成表格                 |
+| C-c C-c        | 调整表格，不移动光标             |
+| TAB            | 移动到下一区域，必要时新建一行   |
+| S-TAB          | 移动到上一区域                   |
+| RET            | 移动到下一行，必要时新建一行     |
+| M-LEFT/RIGHT   | 移动列                           |
+| M-UP/DOWN      | 移动行                           |
+| M-S-LEFT/RIGHT | 删除/插入列                      |
+| M-S-UP/DOWN    | 删除/插入行                      |
+| C-c -          | 添加水平分割线                   |
+| C-c RET        | 添加水平分割线并跳到下一行       |
+| C-c ^          | 根据当前列排序，可以选择排序方式 |
 ** 编码问题
 | 命令                      | 说明                                |
 |---------------------------+-------------------------------------|
@@ -31,21 +38,25 @@ C-q C-j 表示回车换行，可以用在字符串替换中
  + C-x r M-w 矩形复制，这个功能是 rect-mark.el 提供的
 * Org-Mode
 ** 常规操作
-| 命令           | 说明                                                |
-|----------------+-----------------------------------------------------|
-| C-c C-c        | 添加标签                                            |
-| C-c C-e        | 导出文件（html、pdf等）                             |
-| C-c C-p/n      | 移动到上/下一个标题                                 |
-| C-c C-b/f      | 移动到同级别的上/下一个标题                         |
-| TAB            | 局部命令，循环使用可以折叠/展开光标所在位置的标题树 |
-| S+TAB          | 全局命令，循环使用可以折叠/展开整个文档的标题树     |
-| M-LEFT/RIGHT   | 升级/降级当前标题，不允许有子标题的存在             |
-| M-S-LEFT/RIGHT | 升级/降级标题树，即标题树内的各级标题相应升/降级    |
-| M-UP/DOWN      | 在同级标题间上/下移标题树，不能跨级别移动           |
-| M-RET          | 在当前标题后插入同级标题符号（即换行符和星号）      |
-| C-RET          | 在当前标题树后插入同级标题符号                      |
-| M-S-RET        | 在当前标题后插入同级TODO标题                        |
-| C-S-RET        | 在当前标题树后插入同级TODO标题                                                    |
+| 命令           | 说明                                                                                                     |
+|----------------+----------------------------------------------------------------------------------------------------------|
+| C-c C-c        | 添加标签                                                                                                 |
+| C-c C-e        | 导出文件（html、pdf等）                                                                                  |
+| C-c C-p/n      | 移动到上/下一个标题                                                                                      |
+| C-c C-b/f      | 移动到同级别的上/下一个标题                                                                              |
+| TAB            | 局部命令，循环使用可以折叠/展开光标所在位置的标题树                                                      |
+| S+TAB          | 全局命令，循环使用可以折叠/展开整个文档的标题树                                                          |
+| M-LEFT/RIGHT   | 升级/降级当前标题，不允许有子标题的存在                                                                  |
+| M-S-LEFT/RIGHT | 升级/降级标题树，即标题树内的各级标题相应升/降级                                                         |
+| M-UP/DOWN      | 在同级标题间上/下移标题树，不能跨级别移动                                                                |
+| M-RET          | 在当前标题后插入同级标题符号（即换行符和星号）                                                           |
+| C-RET          | 在当前标题树后插入同级标题符号                                                                           |
+| M-S-RET        | 在当前标题后插入同级TODO标题                                                                             |
+| C-S-RET        | 在当前标题树后插入同级TODO标题                                                                           |
+| C-c C-x a      | 将某一个节点打上ARCHIVE标签                                                                              |
+| C-c C-x A      | 将当前节点归入一个名为Archive的子树中，并且这个子树是位于当前级别子树的最下方。                          |
+| C-c C-x C-s    | 把当前的节点移到archived文件中去,默认情况下，归档的子树会被移动到名为“当年文件名_archived”的文件中去。 |
+| C-TAB          | 查看以前存档的事件                                                                                       |
 ** Org文档内容简介
  + 以 # 号后加一空格开始的行表示注释，文件导出时这些内容不被导出，上面第一行就是。
  + 以 #+ 符号开始的行用于设置文档参数或内容属性，比如文档的标题、作者，org-mode打开时文档的呈现状态等。
@@ -68,3 +79,11 @@ C-q C-j 表示回车换行，可以用在字符串替换中
  + 括号内的“!”表示时间戳，设置或改变到该状态时（直接输入关键词不算）将同时插入当前时间
  + 括号内的“@”表示切换到该状态时需要输入文字说明，比如任务取消、流产或失败的原因。
  + 输入后将光标置于该行内使用 C-c C-c 命令可使该定义立刻生效。
+** org-remember mode 搜集材料和想法
+C-c r 打开remember mode，记录想法和任务
+** 用复选框标记非标题类型的子任务
+前面的任务和子任务都是标题形式。Org-mode还支持非标题形式的子任务。对于以”[ ]“开头的列表， 会被当作复选框。这样就形成了局部的子任务， 适用于将一个任务划分成几个简单的步骤。 
+| 命令    | 说明           |
+|---------+----------------|
+| C-c C-c | 改变复选框状态 |
+| M-S-RET | 增加一个子项   |
