--- a/todos/todo.org
+++ b/todos/todo.org
@@ -80,6 +80,10 @@
      :ARCHIVE_TIME: 2013-07-15 周一 16:23
      :END:
 * ZhaiRenHui
+** 记住
+ + [ ] 手机点购系统购物车和历史订单里面的店铺的通讯方式不是很合理，因为在某种意义上来说顾客应该是跟配送人员联系会比较好。
+ + [ ] 配送人员更新订单时将reason设置在OrderUpdateInfo里面了，但是并没有更新到数据库中。
+ + [ ] 
 ** 开发
 *** TODO 手机点购系统[3/4]
 **** TODO 完成订单提交的功能
