--- a/todos/todo.org
+++ b/todos/todo.org
@@ -14,13 +14,19 @@
     - [ ] 验证技术方案
     - [ ] 实现并进行测试 
 ** Bug修改[0/3]
-*** TODO [#B] mobi-platform-ba-monitor的依赖关系有问题[/]
+*** TODO [#C] mobi-platform-ba-monitor的依赖关系有问题[/]
     DEADLINE: <2013-07-19 周五>
     mobi-platform-ba-monitor不应该依赖bd-order、bd-model、order-monitor。
     周冰华本周五解决！
-*** TODO 解决三级目录在欢迎界面显示的问题[/]
+*** TODO 解决三级目录在欢迎界面显示的问题[1/2]
     SCHEDULED: <2013-07-16 周二>
+    - [X] 解决问题，发布新版本[0/0]
+    - [ ] 等等测试验证问题是否以及解决[0/0]
 *** TODO 查找网络不好挂掉的问题[/]
+*** TODO 解决“其他服务”分类在界面切换时的问题[1/2]
+    DEADLINE: <2013-07-16 周二>
+    - [X] 修改bug[0/0]
+    - [ ] 等测试验证是否已经解决[0/0]
 *** Archive							    :ARCHIVE:
 **** Archive							    :ARCHIVE:
 ***** DONE [#A] 解决未发布商品出现在PAD上的问题[0/0]
@@ -55,8 +61,12 @@
 **** TODO 讨论界面效果图[/]
      SCHEDULED: <2013-07-16 周二>
      讨论需要跳出以前的那种分类框架，也要跳出以前那种一定要把分类显示在pad上的做法，要用更加先进方法来做。
-**** TODO 实现”历史订单“界面（黄彦培）
+**** TODO 实现”历史订单“界面（黄彦培、熊志军）[0/2]
      DEADLINE: <2013-07-16 周二 17:00>
+     - [ ] 实现历史订单界面[0/0]
+     - [ ] 跟老戴进行沟通确认“进度”需求：[0/1]
+       1. 用粗略的时间来计算进度，总的时间=备货时间+预估的受理时间+预估的配送时间
+       2. 预定义几个状态（待受理、备货中、配送中、已完成），以这几个状态来平分进度，也就是说仅仅只是一个状态指示功能。
 **** TODO 实现”分类目录“界面（熊志军，黄彦培）
      DEADLINE: <2013-07-19 周五 17:00>
 ** 其他工作
