--- a/notes/emacs学习笔记.org
+++ b/notes/emacs学习笔记.org
@@ -1,4 +1,104 @@
 ﻿* 基本用法
+** 常用命令
+*** 移动光标
+| 命令 | 说明                                     |
+|------+------------------------------------------|
+| C-v  |                                          |
+| M-v  |                                          |
+| M-r  | 将光标移动到屏幕中间那行                 |
+| C-a  | 移到行首                                 |
+| M-a  | 移到句首，从行首到句首之间可能有空格     |
+| C-e  | 移到行尾                                 |
+| M-e  | 移到句尾                                 |
+| M-{  | 向上移动一段                             |
+| M-}  | 向下移动一段                             |
+| C-l  | 重绘屏幕，效果就是当前编辑行移动窗口中央 |
+| M-m  | 将光标移动到当前行的第一个非空白字符上   |
+*** buffer相关
+| 命令      | 说明                                         |
+|-----------+----------------------------------------------|
+| C-x C-s   | 保存当前buffer                               |
+| C-x s     | 保存所有未保存的buffer，会提示你是否需要保存 |
+| C-x C-w   | 文件另存为                                   |
+| C-x right | 切换到下一个缓冲区                           |
+| C-x left  | 切换到前一个缓冲区                           |
+*** 编辑、复制粘贴
+| 命令               | 说明                                                                                                       |
+|--------------------+------------------------------------------------------------------------------------------------------------|
+| M-z                | 删到指定字母处                                                                                             |
+| C-k                | 删除到行尾                                                                                                 |
+| M-k                | 删除到句尾                                                                                                 |
+| C-t                | 文本换位：字符                                                                                                  |
+| M-t                | 文本换位：单词                                                                                                       |
+| C-x C-t            | 文本换位：行                                                                                                         |
+| M-x transpose-*    | 文本换位：其他命令                                                                                                   |
+| M-u                | 后面单词变为大写                                                                                           |
+| M-l                | 后面单词变为小写                                                                                           |
+| M-c                | 后面单词的首字母变大写                                                                                     |
+| M-/                | 补全                                                                                                       |
+| C-j                | 从当前位置分成两行,相当于RET + tab                                                                         |
+| M-(                | 插入()                                                                                                     |
+| C-q tab            | 插入tab                                                                                                    |
+| C-q C-m            | 插入^M                                                                                                     |
+| C-o                | 回车                                                                                                       |
+| M-;                | 产生通用注释                                                                                               |
+| M-x comment-region | 把块注释掉                                                                                                 |
+| M-x kill-comment   | 消除注释                                                                                                   |
+| M-j                | 回车并且到下一行产生适当的缩进                                                                             |
+| C-y                | 粘贴                                                                                                       |
+| M-y                | 用C-y拉回最近被除去的文本后，换成 M-y可以拉回以前被除去的文本。键入多次的M-y可以拉回更早以前被除去的文本。 |
+*** 窗口操作
+| 命令        | 说明                                               |
+|-------------+----------------------------------------------------|
+| C-x <       | 窗口内容右卷                                       |
+| C-x >       | 窗口内容左卷（这两个命令在垂直分割窗口后比较有用） |
+| (C-u) C-x ^ | 加高当前窗口，如果有C-u，则每次加高4行             |
+| (C-u) C-x } | 加宽当前窗口                                       |
+| (C-u) C-x { | 压窄当前窗口                                       |
+| ESC C-v     | 在其它窗口进行卷屏操作                             | 
+*** 搜索和替换
+| 命令               | 说明                                                    |
+|--------------------+---------------------------------------------------------|
+| C-s                | 向前搜索（增量式搜索）；连续C-s，跳到下一个搜索到的目标 |
+| C-s RET            | 普通搜索                                                |
+| C-r                | 向前搜索                                                |
+| C-s RET C-w        | 按单词查询                                              |
+| M-%                | 查询替换，也就是替换前会询问一下                        |
+| M-x replace-string | 普通替换                                                | 
+*** 书签 
+| 命令                | 说明             |
+|---------------------+------------------|
+| C-x r m             | 设置书签bookmark |
+| C-x r b             | 跳到bookmark处   |
+| C-x r l             | 书签列表         |
+| M-x bookmark-delete | 删除书签         |
+| M-x bookmark-load   | 读取存储书签文件 |
+| M-x bookmark-save   | 保存到文件       | 
+*** 宏定义
+| 命令                    | 说明                                   |
+|-------------------------+----------------------------------------|
+| C-x (                   | 开始一个宏的定义                       |
+| C-x )                   | 结束一个宏的定义                       |
+| C-x e                   | 执行宏                                 |
+| M-x name-last-kbd-macro | 给最后一个宏命名                       |
+| M-x insert-kbd-macro    | 在当前文件中插入一个已定义并命名过的宏 | 
+*** 帮助 
+| 命令    | 说明                            |
+|---------+---------------------------------|
+| C-h k   | 显示你将按下的键执行的function. |
+| C-h f   | 列出function的功能说明。        |
+| C-h b   | 列出目前所有的快捷键。          |
+| C-h m   | 列出目前的mode的特殊说明.       |
+| C-c C-h | 列出以C-c 开头的所有快捷键.     |
+*** 其他  
+| 命令      | 说明                                          |
+|-----------+-----------------------------------------------|
+| C-M-\     | 对选中区域，按照某种格式(比如C程序)进行格式化 |
+| C-x h     | 全部选中                                      |
+| M-!       | 执行外部shell命令                             |
+| M-x shell | 模拟shell的buffer                             |
+| M-x term  | 模拟terminal, C-c k 关闭terminal              |
+| C-x C-q   | 修改buffer的只读属性                          |
 ** 文本操作
 C-q C-j 表示回车换行，可以用在字符串替换中
 ** 不重启 Emacs 让 .emacs 配置文件生效				:配置:生效:emacs:
@@ -29,13 +129,15 @@ C-q C-j 表示回车换行，可以用在字符串替换中
 | C-x C-m c RET C-x C-w RET | 另存为指定编码 (会提示当前文件编码) |
 ** 矩形操作								 :矩形:
 矩形操作或者叫做列操作 集中在 C-x r ，可以直接用 C-x r C-h 找到几乎所有列操作命令。常用矩形操作:
- + C-x r d 矩形删除 
- + C-x r c 清空矩形 
- + C-x r t 插入一列字 
- + C-x r k 矩形剪切
- + C-x r y 矩形粘贴 
- + C-x r o 开辟一块空白矩形，字右移 
- + C-x r M-w 矩形复制，这个功能是 rect-mark.el 提供的
+| 命令      | 说明                                     |
+|-----------+------------------------------------------|
+| C-x r d   | 矩形删除                                 |
+| C-x r c   | 清空矩形                                 |
+| C-x r t   | 插入一列字                               |
+| C-x r k   | 矩形剪切                                 |
+| C-x r y   | 矩形粘贴                                 |
+| C-x r o   | 开辟一块空白矩形，字右移                 |
+| C-x r M-w | 矩形复制，这个功能是 rect-mark.el 提供的 |
 * Org-Mode
 ** 常规操作
 | 命令           | 说明                                                                                                     |
@@ -87,3 +189,6 @@ C-c r 打开remember mode，记录想法和任务
 |---------+----------------|
 | C-c C-c | 改变复选框状态 |
 | M-S-RET | 增加一个子项   |
+
+
+* Test Area
