--- a/todos/todo.org
+++ b/todos/todo.org
@@ -61,6 +61,7 @@
 **** TODO 讨论界面效果图[/]
      SCHEDULED: <2013-07-16 周二>
      讨论需要跳出以前的那种分类框架，也要跳出以前那种一定要把分类显示在pad上的做法，要用更加先进方法来做。
+     通过电话跟孙总讨论界面效果图
 **** TODO 实现”历史订单“界面（黄彦培、熊志军）[0/2]
      DEADLINE: <2013-07-16 周二 17:00>
      - [ ] 实现历史订单界面[0/0]
