对文档进行整理。

--- a/todos/todo.org
+++ b/todos/todo.org
@@ -1,32 +1,33 @@
-* FPI 工作
-** TODO 软件业务部上半年述职[0/3]
-*** TODO 跟孙总沟通，看需不需要参加[/]
-*** TODO 编写述职报告[/]
-    DEADLINE: <2013-07-18 周四>
+* FPI 工作								:Fpi:
+** TODO 软件业务部上半年述职[2/3]
 *** TODO 述职[/]
     DEADLINE: <2013-07-22 周一>
 
-* Mobi Platform
+*** Archive							    :ARCHIVE:
+**** DONE 编写述职报告[/]
+     CLOSED: [2013-07-17 周三 17:37] DEADLINE: <2013-07-18 周四>
+     - State "DONE"       from "TODO"       [2013-07-17 周三 17:37]
+     :PROPERTIES:
+     :ARCHIVE_TIME: 2013-07-17 周三 17:38
+     :END:
+**** DONE 跟孙总沟通，看需不需要参加[/]
+     CLOSED: [2013-07-17 周三 17:37]
+     - State "DONE"       from "TODO"       [2013-07-17 周三 17:37]
+     :PROPERTIES:
+     :ARCHIVE_TIME: 2013-07-17 周三 17:38
+     :END:
+* Mobi Platform							       :Mobi:
 ** 新需求[0/1]
-*** TODO [#C] 实现Pad应用程序后台静默升级[0/3]
+*** TODO [#C] 实现Pad应用程序后台静默升级[2/3]
     SCHEDULED: <2013-07-15 周一>
-    - [ ] 技术准备，网上调研静默升级方案
-    - [ ] 验证技术方案
+    - [X] 技术准备，网上调研静默升级方案
+    - [X] 验证技术方案
     - [ ] 实现并进行测试 
-** Bug修改[0/3]
-*** TODO [#C] mobi-platform-ba-monitor的依赖关系有问题[/]
+** Bug修改[3/4]
+*** TODO [#C] mobi-platform-ba-monitor的依赖关系有问题[/]	   :Delegate:
     DEADLINE: <2013-07-19 周五>
     mobi-platform-ba-monitor不应该依赖bd-order、bd-model、order-monitor。
     周冰华本周五解决！
-*** TODO 解决三级目录在欢迎界面显示的问题[1/2]
-    SCHEDULED: <2013-07-16 周二>
-    - [X] 解决问题，发布新版本[0/0]
-    - [ ] 等等测试验证问题是否以及解决[0/0]
-*** TODO 查找网络不好挂掉的问题[/]
-*** TODO 解决“其他服务”分类在界面切换时的问题[1/2]
-    DEADLINE: <2013-07-16 周二>
-    - [X] 修改bug[0/0]
-    - [ ] 等测试验证是否已经解决[0/0]
 *** Archive							    :ARCHIVE:
 **** Archive							    :ARCHIVE:
 ***** DONE [#A] 解决未发布商品出现在PAD上的问题[0/0]
@@ -45,31 +46,68 @@
      - 已经重现问题：从包含三级目录的商品选购界面进入到“历史订单”或者“购物车”界面，然后关闭屏幕，再开启屏幕就会导致三级目录显示在欢迎界面。
    + 定位出问题的所在
    + 解决问题
+**** DONE 解决“其他服务”分类在界面切换时的问题[2/2]
+     CLOSED: [2013-07-17 周三 17:39] DEADLINE: <2013-07-16 周二>
+     - State "DONE"       from "TODO"       [2013-07-17 周三 17:39]
+     :PROPERTIES:
+     :ARCHIVE_TIME: 2013-07-17 周三 17:40
+     :END:
+     - [X] 修改bug[0/0]
+     - [X] 等测试验证是否已经解决[0/0]
+**** DONE 查找网络不好挂掉的问题[/]
+     CLOSED: [2013-07-17 周三 17:39]
+     - State "DONE"       from "TODO"       [2013-07-17 周三 17:39]
+     :PROPERTIES:
+     :ARCHIVE_TIME: 2013-07-17 周三 17:40
+     :END:
+**** DONE 解决三级目录在欢迎界面显示的问题[2/2]
+     CLOSED: [2013-07-17 周三 17:39] SCHEDULED: <2013-07-16 周二>
+     - State "DONE"       from "TODO"       [2013-07-17 周三 17:39]
+     :PROPERTIES:
+     :ARCHIVE_TIME: 2013-07-17 周三 17:40
+     :END:
+     - [X] 解决问题，发布新版本[0/0]
+     - [X] 等等测试验证问题是否以及解决[0/0]
 ** Pad端重构[0/1]
 *** 工作 确认Pad端新原型[2/3]
-**** DONE 跟孙总讨论初步界面要求[/]
-     - State "DONE"       from "TODO"       [2013-07-12 周五 10:50]
-**** DONE 跟李建阳沟通界面需求[/]
-     - State "DONE"       from "TODO"       [2013-07-12 周五 10:50]
 **** 工作 绘制效果图[2/2]
-***** DONE 绘制历史订单效果图[/]
-      DEADLINE: <2013-07-12 周五 14:00>
-      - State "DONE"       from "TODO"       [2013-07-12 周五 15:45]
 ***** DONE 绘制三级分类显示效果图[/]
       CLOSED: [2013-07-15 周一 16:19] DEADLINE: <2013-07-15 周一 12:00>
       - State "DONE"       from "TODO"       [2013-07-15 周一 16:19]
-**** TODO 讨论界面效果图[/]
-     SCHEDULED: <2013-07-16 周二>
-     讨论需要跳出以前的那种分类框架，也要跳出以前那种一定要把分类显示在pad上的做法，要用更加先进方法来做。
-     通过电话跟孙总讨论界面效果图
-**** TODO 实现”历史订单“界面（黄彦培、熊志军）[0/2]
-     DEADLINE: <2013-07-16 周二 17:00>
+***** Archive							    :ARCHIVE:
+****** DONE 绘制历史订单效果图[/]
+       DEADLINE: <2013-07-12 周五 14:00>
+       - State "DONE"       from "TODO"       [2013-07-12 周五 15:45]
+       :PROPERTIES:
+       :ARCHIVE_TIME: 2013-07-17 周三 17:42
+       :END:
+**** TODO 实现”历史订单“界面（黄彦培、熊志军）[1/3]
+     DEADLINE: <2013-07-17 周三 17:00>
      - [ ] 实现历史订单界面[0/0]
-     - [ ] 跟老戴进行沟通确认“进度”需求：[0/1]
+     - [X] 跟老戴进行沟通确认“进度”需求：[0/0]
        1. 用粗略的时间来计算进度，总的时间=备货时间+预估的受理时间+预估的配送时间
        2. 预定义几个状态（待受理、备货中、配送中、已完成），以这几个状态来平分进度，也就是说仅仅只是一个状态指示功能。
+     - [ ] 跟黄彦培确认是否已经实现
 **** TODO 实现”分类目录“界面（熊志军，黄彦培）
      DEADLINE: <2013-07-19 周五 17:00>
+**** Archive							    :ARCHIVE:
+***** DONE 跟孙总讨论初步界面要求[/]
+      - State "DONE"       from "TODO"       [2013-07-12 周五 10:50]
+      :PROPERTIES:
+      :ARCHIVE_TIME: 2013-07-17 周三 17:42
+      :END:
+***** DONE 跟李建阳沟通界面需求[/]
+      - State "DONE"       from "TODO"       [2013-07-12 周五 10:50]
+      :PROPERTIES:
+      :ARCHIVE_TIME: 2013-07-17 周三 17:42
+      :END:
+***** TODO 讨论界面效果图[/]
+      SCHEDULED: <2013-07-16 周二>
+      :PROPERTIES:
+      :ARCHIVE_TIME: 2013-07-17 周三 17:42
+      :END:
+      讨论需要跳出以前的那种分类框架，也要跳出以前那种一定要把分类显示在pad上的做法，要用更加先进方法来做。
+      通过电话跟孙总讨论界面效果图
 ** 其他工作
 *** Archive							    :ARCHIVE:
 **** DONE 找周冰华，让他在www服务器上部署一个测试环境		   :Delegate:
@@ -90,7 +128,7 @@
      :PROPERTIES:
      :ARCHIVE_TIME: 2013-07-15 周一 16:23
      :END:
-* ZhaiRenHui
+* ZhaiRenHui							      :Herod:
 ** 记住
  + [ ] 手机点购系统购物车和历史订单里面的店铺的通讯方式不是很合理，因为在某种意义上来说顾客应该是跟配送人员联系会比较好。
  + [ ] 配送人员更新订单时将reason设置在OrderUpdateInfo里面了，但是并没有更新到数据库中。
@@ -119,7 +157,7 @@
       :END:
 *** TODO 配送人员手持系统[/]
 *** TODO 后台管理系统[/]
-* 阅读、充电
+* 阅读、充电							      :Study:
 ** TODO 提高自己的时间管理能力，阅读《尽管去做——无压力工作的艺术》     :Easy:
    任务延时有两个原因：
    1. 开发宅人汇去了；
@@ -127,7 +165,7 @@
    DEADLINE: <2013-07-16 周二>
 ** TODO 学会使用Emacs Org-Mode来进行GTD，首先要学习Org-Mode
 ** TODO 深入了解Git分布式版本管理系统，阅读《Pro.Git-zh_CN》
-* 购房
+* 购房								     :Family:
 ** TODO 房子过户
    
 * DONE 测试
