修改文件编码

--- a/inbox/inbox-works.org
+++ b/inbox/inbox-works.org
@@ -1,19 +1,19 @@
 * Work
-** TODO ¼ì²éÕÅÀûÇÉPadÈý¼¶Ä¿Â¼¹¦ÄÜÔ­ÐÍ»æÖÆ³É¹û			       :Mobi:
-** TODO Ë¼¿¼²âÊÔ·ÖÖ§¡¢ÐÂ¹¦ÄÜ·ÖÖ§ºÍÕýÊ½ÔËÓª°æ±¾Ö®¼äµÄ¹ØÏµ£¬Ë¼¿¼½â¾ö·½°¸ :Mobi:
+** TODO æ£€æŸ¥å¼ åˆ©å·§Padä¸‰çº§ç›®å½•åŠŸèƒ½åŽŸåž‹ç»˜åˆ¶æˆæžœ			       :Mobi:
+** TODO æ€è€ƒæµ‹è¯•åˆ†æ”¯ã€æ–°åŠŸèƒ½åˆ†æ”¯å’Œæ­£å¼è¿è¥ç‰ˆæœ¬ä¹‹é—´çš„å…³ç³»ï¼Œæ€è€ƒè§£å†³æ–¹æ¡ˆ :Mobi:
 
-** TODO Íê³ÉÒÆ¶¯°æ±¾ºÍWeb°æ±¾µÄµã¹ººóÌ¨·þÎñµÄ¿ª·¢
+** TODO å®Œæˆç§»åŠ¨ç‰ˆæœ¬å’ŒWebç‰ˆæœ¬çš„ç‚¹è´­åŽå°æœåŠ¡çš„å¼€å‘
 
-** TODO È·¶¨android apk ¾²Ä¬°²×°µÄÎÊÌâ
-   1. [ ] Ê×ÏÈÈ·¶¨¿ÉÐÐÐÔÎÊÌâ
-   2. [ ] Èç¹û¿ÉÐÐµÄ»°£¬Ñ°ÕÒ½â¾ö·½°¸£¬·ñÔòÖÕÖ¹¸ÃÎÊÌâµÄÑÐ¾¿
-   3. [ ] ½â¾ö¸ÃÎÊÌâ
+** TODO ç¡®å®šandroid apk é™é»˜å®‰è£…çš„é—®é¢˜
+   1. [ ] é¦–å…ˆç¡®å®šå¯è¡Œæ€§é—®é¢˜
+   2. [ ] å¦‚æžœå¯è¡Œçš„è¯ï¼Œå¯»æ‰¾è§£å†³æ–¹æ¡ˆï¼Œå¦åˆ™ç»ˆæ­¢è¯¥é—®é¢˜çš„ç ”ç©¶
+   3. [ ] è§£å†³è¯¥é—®é¢˜
 
-** TODO ÏÂÔØAndroidÔ´Âë
+** TODO ä¸‹è½½Androidæºç 
 
-** TODO ÔÚÕÅÀûÇÉÍê³ÉÁËÈý¼¶·ÖÀà¹¦ÄÜÔ­ÐÍµÄ»æÖÆ¹¤×÷ºó¸úËï×Ü»ã±¨
+** TODO åœ¨å¼ åˆ©å·§å®Œæˆäº†ä¸‰çº§åˆ†ç±»åŠŸèƒ½åŽŸåž‹çš„ç»˜åˆ¶å·¥ä½œåŽè·Ÿå­™æ€»æ±‡æŠ¥
 
-** TODO È·ÈÏ²¢¼ì²é»ÆÑåÅà¶Ô¡°ÀúÊ·¶©µ¥¡±½çÃæµÄÍê³ÉÇé¿ö
-** TODO ÍêÉÆpadºóÌ¨×Ô¶¯¾²Ä¬Éý¼¶µÄ¹¦ÄÜ				       :Mobi:
+** TODO ç¡®è®¤å¹¶æ£€æŸ¥é»„å½¦åŸ¹å¯¹â€œåŽ†å²è®¢å•â€ç•Œé¢çš„å®Œæˆæƒ…å†µ
+** TODO å®Œå–„padåŽå°è‡ªåŠ¨é™é»˜å‡çº§çš„åŠŸèƒ½				       :Mobi:
 
 
