--- a/inbox/inbox-commons.org
+++ b/inbox/inbox-commons.org
@@ -1,3 +1,4 @@
 * Common
 ** TODO 记得在下班前将.emacs里面的配置内容提交到github上去，这样就可以在办公室和家里同时利用emacs进行办公了 :Study:
+** TODO 如果没有身份证原件的话，网购火车票需要准备网购订单号、身份证复印件和一寸照片一张。 :火车票:
 
