--- a/todos/todo.org
+++ b/todos/todo.org
@@ -17,13 +17,20 @@
      :ARCHIVE_TIME: 2013-07-17 周三 17:38
      :END:
 * Mobi Platform							       :Mobi:
-** 新需求[0/1]
-*** TODO [#C] 实现Pad应用程序后台静默升级[2/3]
-    SCHEDULED: <2013-07-15 周一>
-    - [X] 技术准备，网上调研静默升级方案
-    - [X] 验证技术方案
-    - [ ] 实现并进行测试 
-** Bug修改[3/4]
+** 新需求[1/1]
+*** 传给配送系统的配送任务应该增加一个店铺的地址列表
+    SCHEDULED: <2013-07-19 周五>
+*** Archive							    :ARCHIVE:
+**** DONE [#C] 实现Pad应用程序后台静默升级[3/3]
+     CLOSED: [2013-07-18 周四 16:11] SCHEDULED: <2013-07-15 周一>
+     - State "DONE"       from "TODO"       [2013-07-18 周四 16:11]
+     :PROPERTIES:
+     :ARCHIVE_TIME: 2013-07-18 周四 16:11
+     :END:
+     - [X] 技术准备，网上调研静默升级方案
+     - [X] 验证技术方案
+     - [X] 实现并进行测试 
+** Bug修改[1/2]
 *** TODO [#C] mobi-platform-ba-monitor的依赖关系有问题[/]	   :Delegate:
     DEADLINE: <2013-07-19 周五>
     mobi-platform-ba-monitor不应该依赖bd-order、bd-model、order-monitor。
@@ -68,12 +75,17 @@
      :END:
      - [X] 解决问题，发布新版本[0/0]
      - [X] 等等测试验证问题是否以及解决[0/0]
+**** DONE pad升级逻辑不对，应该改成返回到欢迎界面就需要检查是否需要升级
+     CLOSED: [2013-07-18 周四 16:34]
+     - State "DONE"       from "TODO"       [2013-07-18 周四 16:34]
+     :PROPERTIES:
+     :ARCHIVE_TIME: 2013-07-18 周四 16:34
+     :END:
 ** Pad端重构[0/1]
 *** 工作 确认Pad端新原型[2/3]
 **** 工作 绘制效果图[2/2]
-***** DONE 绘制三级分类显示效果图[/]
-      CLOSED: [2013-07-15 周一 16:19] DEADLINE: <2013-07-15 周一 12:00>
-      - State "DONE"       from "TODO"       [2013-07-15 周一 16:19]
+***** TODO 检查张利巧绘制的新的点购效果图，并将这个效果图发给孙总和老戴查看
+      DEADLINE: <2013-07-19 周五 11:30>
 ***** Archive							    :ARCHIVE:
 ****** DONE 绘制历史订单效果图[/]
        DEADLINE: <2013-07-12 周五 14:00>
@@ -81,15 +93,19 @@
        :PROPERTIES:
        :ARCHIVE_TIME: 2013-07-17 周三 17:42
        :END:
-**** TODO 实现”历史订单“界面（黄彦培、熊志军）[1/3]
+****** DONE 绘制三级分类显示效果图[/]
+       CLOSED: [2013-07-15 周一 16:19] DEADLINE: <2013-07-15 周一 12:00>
+       - State "DONE"       from "TODO"       [2013-07-15 周一 16:19]
+       :PROPERTIES:
+       :ARCHIVE_TIME: 2013-07-18 周四 14:41
+       :END:
+**** TODO 实现”历史订单“界面（黄彦培、熊志军）[2/3]
      DEADLINE: <2013-07-17 周三 17:00>
-     - [ ] 实现历史订单界面[0/0]
+     - [X] 实现历史订单界面[0/0]
      - [X] 跟老戴进行沟通确认“进度”需求：[0/0]
-       1. 用粗略的时间来计算进度，总的时间=备货时间+预估的受理时间+预估的配送时间
-       2. 预定义几个状态（待受理、备货中、配送中、已完成），以这几个状态来平分进度，也就是说仅仅只是一个状态指示功能。
+       + 用粗略的时间来计算进度，总的时间=备货时间+预估的受理时间+预估的配送时间
      - [ ] 跟黄彦培确认是否已经实现
 **** TODO 实现”分类目录“界面（熊志军，黄彦培）
-     DEADLINE: <2013-07-19 周五 17:00>
 **** Archive							    :ARCHIVE:
 ***** DONE 跟孙总讨论初步界面要求[/]
       - State "DONE"       from "TODO"       [2013-07-12 周五 10:50]
@@ -134,8 +150,7 @@
  + [ ] 配送人员更新订单时将reason设置在OrderUpdateInfo里面了，但是并没有更新到数据库中。
  + [ ] 
 ** 开发
-*** TODO 手机点购系统[3/4]
-**** TODO 完成订单提交的功能
+*** 手机点购系统[1/1]
 **** Archive							    :ARCHIVE:
 ***** DONE 重构org.herod.order.web.buyer.BuyerPhoneService接口，将这个移动到herod-order工程中去。[/]
       CLOSED: [2013-07-14 周日 12:40]
@@ -155,14 +170,19 @@
       :PROPERTIES:
       :ARCHIVE_TIME: 2013-07-15 周一 09:44
       :END:
-*** TODO 配送人员手持系统[/]
-*** TODO 后台管理系统[/]
-* 阅读、充电							      :Study:
+***** DONE 完成订单提交的功能
+      CLOSED: [2013-07-18 周四 11:34]
+      - State "DONE"       from "TODO"       [2013-07-18 周四 11:34]
+      :PROPERTIES:
+      :ARCHIVE_TIME: 2013-07-18 周四 11:34
+      :END:
+*** 配送人员手持系统[/]
+***  后台管理系统[/]
+* 阅读、充电 							      :Study:
 ** TODO 提高自己的时间管理能力，阅读《尽管去做——无压力工作的艺术》     :Easy:
    任务延时有两个原因：
    1. 开发宅人汇去了；
    2. 个人惰性，以后需要克服！
-   DEADLINE: <2013-07-16 周二>
 ** TODO 学会使用Emacs Org-Mode来进行GTD，首先要学习Org-Mode
 ** TODO 深入了解Git分布式版本管理系统，阅读《Pro.Git-zh_CN》
 * 购房								     :Family:
@@ -170,3 +190,11 @@
    
 * DONE 测试
   
+* Archive							    :ARCHIVE:
+** DONE 记得跟二姐打电话，跟她确认身份证情况，如果没有问题的话，需要她将身份证拍照传给我，便于打印身份证复印件
+   CLOSED: [2013-07-18 周四 14:34] DEADLINE: <2013-07-18 周四 14:30>
+   - State "DONE"       from "TODO"       [2013-07-18 周四 14:34]
+   :PROPERTIES:
+   :ARCHIVE_TIME: 2013-07-18 周四 14:34
+   :END:
+
